Adding final dot to description
At composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "thbighead/wordless-framework",
-  "description": "Wordless Framework",
+  "description": "Wordless Framework.",
   "license": "MIT",
   "autoload": {
     "psr-4": {
