Naming as Infobase project
License now is proprietary. Changing package vendor and adding more info to README.md

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-  "name": "thbighead/wordless-framework",
+  "name": "infobaseit/wordless-framework",
   "description": "Wordless Framework.",
-  "license": "MIT",
+  "license": "proprietary",
   "autoload": {
     "psr-4": {
       "Wordless\\": "src/"
@@ -10,7 +10,7 @@
   "authors": [
     {
       "name": "Thales Nathan",
-      "email": "thcmatias@gmail.com"
+      "email": "thales.matias@infobase.com.br"
     }
   ],
   "config": {
