--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 /src/Commands/InitializeTestEnvironment.php     export-ignore
 /test-environment                               export-ignore
 /test-environment-backup                        export-ignore
+/vendor                                         export-ignore
