It's local, not test
We don't take care of test environments, only local, staging and production

--- a/test-environment-backup/.env
+++ b/test-environment-backup/.env
@@ -1,5 +1,5 @@
 APP_NAME=test-environment
-APP_ENV=test
+APP_ENV=local
 APP_URL=https://wordless-test.dev.br
 
 FRONT_END_URL=https://wordless-test.dev.br
