--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "symfony/dotenv": "^5.3",
     "symfony/http-client": "^5.3",
     "symfony/http-foundation": "^5.3",
-    "wp-cli/wp-cli-bundle": "^2.5",
+    "wp-cli/wp-cli-bundle": "^2.5"
   },
   "require-dev": {
     "psy/psysh": "^0.10.8",
