--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,11 @@
       "Wordless\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Wordless\\Tests\\": "tests/"
+    }
+  },
   "authors": [
     {
       "name": "Thales Nathan",
