Fixing for docker environment
Update .env of test-environment

--- a/test-environment-backup/.env
+++ b/test-environment-backup/.env
@@ -1,13 +1,13 @@
 APP_NAME=test-environment
 APP_ENV=local
-APP_URL=https://wordless-test.dev.br
+APP_URL=https://wordless-test.local
 
-FRONT_END_URL=https://wordless-test.dev.br
+FRONT_END_URL=https://wordless-test.local
 
 DB_NAME=wordless-test
 DB_USER=root
-DB_PASSWORD=
-DB_HOST=127.0.0.1
+DB_PASSWORD=root
+DB_HOST=theme-dev-mariadb-1
 DB_CHARSET=utf8mb4
 DB_COLLATE=utf8mb4_unicode_ci
 DB_TABLE_PREFIX=test_
@@ -21,6 +21,8 @@ WP_THEME=wordless
 #WP_PERMALINK=
 
 WP_DEBUG=true
+
+WP_ACCESSIBLE_HOSTS=*
 
 AUTH_KEY="lJzqRQ0@D(D+(9,EY%0t)ZEM%<ft}:zg&>hr)[9+CN!.Ft#$yu~E!6chF+q(a9R("
 SECURE_AUTH_KEY="y;w4N&1uPrNmw]W+~kB^|L:@qH,400B+Oh30eAyj=D~$.gj,%{Gz<DN8F=s|if9B"
