Changing theme test

--- a/test-environment-backup/.env
+++ b/test-environment-backup/.env
@@ -17,7 +17,7 @@ WORDLESS_CSP=true
 WP_LANGUAGES=pt_BR
 
 WP_VERSION=5.9
-WP_THEME=wordless
+WP_THEME=infobase-wp-theme
 #WP_PERMALINK=
 
 WP_DEBUG=true
