--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "php": "^7.4",
     "ext-json": "*",
     "ext-openssl": "*",
+    "ramsey/uuid": "^4.2",
     "symfony/console": "^5.3",
     "symfony/dotenv": "^5.3",
     "symfony/http-client": "^5.3",
