Trying to fix APP_HOST config

--- a/test-environment-backup/.env
+++ b/test-environment-backup/.env
@@ -1,8 +1,8 @@
 APP_NAME=test-environment
 APP_ENV=local
-APP_URL=https://wordless-test.local
+APP_URL=https://${APP_HOST}
 
-FRONT_END_URL=https://wordless-test.local
+FRONT_END_URL=https://${APP_HOST}
 
 DB_NAME=wordless-test
 DB_USER=root
