--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,7 @@ indent_style = space
 insert_final_newline = true
 max_line_length = 120
 tab_width = 4
+trim_trailing_whitespace = true
 ij_continuation_indent_size = 8
 ij_formatter_off_tag = @formatter:off
 ij_formatter_on_tag = @formatter:on
@@ -13,6 +14,12 @@ ij_formatter_tags_enabled = false
 ij_smart_tabs = false
 ij_visual_guides = none
 ij_wrap_on_typing = false
+
+[{Dockerfile,*.js}]
+indent_size = 2
+
+[{*.md,.env,.env.example}]
+trim_trailing_whitespace = false
 
 [*.blade.php]
 ij_blade_keep_indents_on_empty_lines = false
@@ -744,6 +751,7 @@ ij_html_space_inside_empty_tag = false
 ij_html_text_wrap = normal
 
 [{*.markdown,*.md}]
+trim_trailing_whitespace = false
 ij_markdown_force_one_space_after_blockquote_symbol = true
 ij_markdown_force_one_space_after_header_symbol = true
 ij_markdown_force_one_space_after_list_bullet = true
