--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "php": "^7.4",
     "ext-json": "*",
     "ext-openssl": "*",
+    "doctrine/inflector": "^2.0",
     "ramsey/uuid": "^4.2",
     "symfony/console": "^5.3",
     "symfony/dotenv": "^5.3",
