--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "ext-json": "*",
     "ext-openssl": "*",
     "doctrine/inflector": "^2.0",
+    "lcobucci/jwt": "^4.2",
     "ramsey/uuid": "^4.2",
     "symfony/console": "^5.3",
     "symfony/dotenv": "^5.3",
