--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
     "symfony/dotenv": "^5.3",
     "symfony/http-client": "^5.3",
     "symfony/http-foundation": "^5.3",
+    "symfony/validator": "^5.4",
     "wp-cli/wp-cli-bundle": "^2.5"
   },
   "require-dev": {
