--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "ext-openssl": "*",
     "doctrine/inflector": "^2.0",
     "lcobucci/jwt": "^4.2",
+    "monolog/monolog": "^2.9",
     "ramsey/uuid": "^4.2",
     "symfony/console": "^5.3",
     "symfony/dotenv": "^5.3",
