--- a/composer.json
+++ b/composer.json
@@ -38,10 +38,10 @@
     "symfony/http-client": "^5.3",
     "symfony/http-foundation": "^5.3",
     "symfony/validator": "^5.4",
-    "wp-cli/wp-cli-bundle": "^2.5"
+    "wp-cli/wp-cli-bundle": "^2.5",
+    "fakerphp/faker": "^1.23"
   },
   "require-dev": {
-    "fakerphp/faker": "^1.23",
     "phpunit/phpunit": "^9.5",
     "psy/psysh": "^0.10.8",
     "symfony/var-dumper": "^5.3"
