--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
     "symfony/http-foundation": "^5.3",
     "symfony/validator": "^5.4",
     "wp-cli/wp-cli-bundle": "^2.5",
-    "fakerphp/faker": "^1.23"
+    "fakerphp/faker": "^1.23",
+    "paragonie/csp-builder": "~2.9.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
