--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "symfony/http-client": "^5.3",
     "symfony/http-foundation": "^5.3",
     "symfony/validator": "^5.4",
-    "wp-cli/wp-cli-bundle": "^2.5"
+    "wp-cli/wp-cli-bundle": "^2.5",
+    "ext-http": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
