--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,7 @@
     "symfony/http-client": "^5.3",
     "symfony/http-foundation": "^5.3",
     "symfony/validator": "^5.4",
-    "wp-cli/wp-cli-bundle": "^2.5",
-    "ext-http": "*"
+    "wp-cli/wp-cli-bundle": "^2.5"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
