--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "preferred-install": "dist",
     "sort-packages": true,
     "allow-plugins": {
-      "composer/installers": true
+      "roots/wordpress-core-installer": true
     }
   },
   "minimum-stability": "dev",
@@ -32,30 +32,23 @@
     "php": "^8.2",
     "ext-json": "*",
     "ext-openssl": "*",
-    "composer/installers": "^2.2",
     "doctrine/inflector": "^2.0",
-    "lcobucci/jwt": "^4.2",
-    "ramsey/uuid": "^4.2",
-    "symfony/console": "^5.3",
-    "symfony/dotenv": "^5.3",
-    "symfony/http-client": "^5.3",
-    "symfony/http-foundation": "^5.3",
-    "symfony/validator": "^5.4",
-    "wp-cli/wp-cli-bundle": "^2.5"
+    "lcobucci/jwt": "^5.2",
+    "ramsey/uuid": "^4.7",
+    "roots/wordpress": "^6.4",
+    "symfony/console": "^6.3",
+    "symfony/dotenv": "^6.3",
+    "symfony/http-client": "^6.3",
+    "symfony/http-foundation": "^6.3",
+    "symfony/validator": "^6.3",
+    "wp-cli/wp-cli-bundle": "^2.6"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5",
-    "psy/psysh": "^0.10.8",
-    "symfony/var-dumper": "^5.3"
+    "phpunit/phpunit": "^10.4",
+    "psy/psysh": "^0.11.22",
+    "symfony/var-dumper": "^6.3"
   },
   "extra": {
-    "installer-paths": {
-      "wp/wp-content/plugins/{$name}/": [
-        "type:wordpress-plugin"
-      ],
-      "wp/wp-content/themes/{$name}/": [
-        "type:wordpress-theme"
-      ]
-    }
+    "wordpress-install-dir": "wp/wp-core"
   }
 }
