--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,9 @@
 /.git                                           export-ignore
 /.idea                                          export-ignore
+/config                                         export-ignore
 /console                                        export-ignore
 /docker                                         export-ignore
-/src/Commands/InitializeTestEnvironment.php     export-ignore
 /vendor                                         export-ignore
 /wp                                             export-ignore
+/wp-cli.php                                     export-ignore
+/wp-config.php                                  export-ignore
