Removing old command

--- a/composer.json
+++ b/composer.json
@@ -52,8 +52,7 @@
   "scripts": {
     "post-autoload-dump": [
       "touch .env",
-      "cp wp-config.php wp/wp-core/wp-config.php",
-      "@php console mup:loader"
+      "cp wp-config.php wp/wp-core/wp-config.php"
     ]
   },
   "extra": {
