--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,7 +94,7 @@ services:
         - INSTALL_GRAPHVIZ=false
         - INSTALL_IONCUBE=false
         - INSTALL_APCU=false
-        - INSTALL_MYSQL_CLIENT=false
+        - INSTALL_MYSQL_CLIENT=true
         - INSTALL_PING=false
         - INSTALL_SSHPASS=false
         - INSTALL_INOTIFY=false
@@ -151,6 +151,7 @@ services:
       - backend
   ### MariaDB ##############################################
   mariadb:
+    container_name: wordless-framework-mariadb
     build:
       context: ./docker/mariadb
       args:
