--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,9 @@ services:
         - INSTALL_BZ2=false
         - INSTALL_GMP=false
         - INSTALL_GNUPG=false
-        - INSTALL_XDEBUG=true
+        - INSTALL_XDEBUG=false
         - XDEBUG_PORT=9003
-        - INSTALL_PCOV=false
+        - INSTALL_PCOV=true
         - INSTALL_PHPDBG=false
         - INSTALL_BLACKFIRE=false
         - INSTALL_SSH2=false
