Wip commands refactored + carbon package

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "ext-pcntl": "*",
     "doctrine/inflector": "^2.0",
     "lcobucci/jwt": "^5.2",
+    "nesbot/carbon": "^2.72",
     "ramsey/uuid": "^4.7",
     "roots/wordpress": "^6.4",
     "symfony/console": "^6.3",
