--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "ext-pcntl": "*",
     "doctrine/inflector": "^2.0",
     "lcobucci/jwt": "^5.2",
+    "monolog/monolog": "^3.5",
     "nesbot/carbon": "^2.72",
     "paragonie/csp-builder": "^3.0",
     "ramsey/uuid": "^4.7",
