--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 /.idea                                          export-ignore
 /console                                        export-ignore
 /docker                                         export-ignore
+/logs                                           export-ignore
 /vendor                                         export-ignore
 /wp                                             export-ignore
 /.editorconfig                                  export-ignore
