--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
         - INSTALL_BZ2=false
         - INSTALL_GMP=false
         - INSTALL_GNUPG=false
-        - INSTALL_XDEBUG=false
+        - INSTALL_XDEBUG=true
         - XDEBUG_PORT=9003
         - INSTALL_PCOV=true
         - INSTALL_PHPDBG=false
