Managing wp-cli/wp-cli package to not get dev-main version
For some reason wp-cli/wp-cli-bundle was trying to install wp-cli/wp-cli
in dev-main version, which sometimes get a bunch of errors due to
breaking changes into the package

--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
     "symfony/http-client": "^6.3",
     "symfony/http-foundation": "^6.3",
     "symfony/validator": "^6.3",
-    "wp-cli/wp-cli-bundle": "^2.6"
+    "wp-cli/wp-cli-bundle": "^2.10",
+    "wp-cli/wp-cli": "^2.10"
   },
   "require-dev": {
     "fakerphp/faker": "~1.23.0",
