--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "ext-openssl": "*",
     "ext-pcntl": "*",
     "doctrine/inflector": "^2.0",
+    "fruitcake/php-cors": "^1.3",
     "lcobucci/jwt": "^5.2",
     "monolog/monolog": "^3.5",
     "nesbot/carbon": "^2.72",
@@ -46,8 +47,8 @@
     "symfony/http-client": "^6.3",
     "symfony/http-foundation": "^6.3",
     "symfony/validator": "^6.3",
-    "wp-cli/wp-cli-bundle": "^2.10",
-    "wp-cli/wp-cli": "^2.10"
+    "wp-cli/wp-cli": "^2.10",
+    "wp-cli/wp-cli-bundle": "^2.10"
   },
   "require-dev": {
     "fakerphp/faker": "~1.23.0",
