--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
   },
   "require-dev": {
     "fakerphp/faker": "~1.23.0",
+    "matthiasmullie/minify": "^1.3",
     "phpunit/phpunit": "~10.5.3",
     "psy/psysh": "^0.11.22",
     "symfony/var-dumper": "^6.3"
