Adding php extensions required by WordPress
We have filtered those packages from the following documentation:
https://make.wordpress.org/hosting/handbook/server-environment/#php-extensions

--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,26 @@
   "prefer-stable": true,
   "require": {
     "php": "^8.2",
+    "ext-apcu": "*",
+    "ext-bcmath": "*",
+    "ext-curl": "*",
+    "ext-dom": "*",
+    "ext-exif": "*",
     "ext-fileinfo": "*",
     "ext-filter": "*",
+    "ext-iconv": "*",
+    "ext-intl": "*",
     "ext-json": "*",
+    "ext-memcached": "*",
+    "ext-mbstring": "*",
+    "ext-mysqli": "*",
     "ext-openssl": "*",
     "ext-pcntl": "*",
+    "ext-shmop": "*",
+    "ext-simplexml": "*",
+    "ext-sodium": "*",
+    "ext-xml": "*",
+    "ext-xmlreader": "*",
     "doctrine/inflector": "^2.0",
     "fakerphp/faker": "~1.23.0",
     "fruitcake/php-cors": "^1.3",
