Adding Symfony PHP extensions
Gathered from
https://symfony.com/doc/current/setup.html#technical-requirements

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
     "php": "^8.2",
     "ext-apcu": "*",
     "ext-bcmath": "*",
+    "ext-ctype": "*",
     "ext-curl": "*",
     "ext-dom": "*",
     "ext-exif": "*",
@@ -45,9 +46,12 @@
     "ext-mysqli": "*",
     "ext-openssl": "*",
     "ext-pcntl": "*",
+    "ext-pcre": "*",
+    "ext-session": "*",
     "ext-shmop": "*",
     "ext-simplexml": "*",
     "ext-sodium": "*",
+    "ext-tokenizer": "*",
     "ext-xml": "*",
     "ext-xmlreader": "*",
     "doctrine/inflector": "^2.0",
