Fixing multiple environments network
As you keep multiple wordless projects getting up, we create a network
to each of them. Then docker gets it maxed out.

Now we should share the network between projects

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,10 @@ version: '3.5'
 
 networks:
   frontend:
+    name: wordless-frontend-network
     driver: bridge
   backend:
+    name: wordless-backend-network
     driver: bridge
 
 volumes:
