--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,22 @@
     "preferred-install": "dist",
     "sort-packages": true,
     "allow-plugins": {
+      "composer/installers": true,
       "roots/wordpress-core-installer": true
     }
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://wpackagist.org"
+    },
+    {
+      "type": "composer",
+      "url": "https://packagist.org"
+    }
+  ],
   "require": {
     "php": "^8.2",
     "ext-apcu": "*",
@@ -78,7 +89,8 @@
     "matthiasmullie/minify": "^1.3",
     "phpunit/phpunit": "~10.5.3",
     "psy/psysh": "^0.11.22",
-    "symfony/var-dumper": "^6.3"
+    "symfony/var-dumper": "^6.3",
+    "wpackagist-plugin/index-wp-mysql-for-speed": "^1.5"
   },
   "scripts": {
     "post-autoload-dump": [
@@ -88,6 +100,11 @@
     ]
   },
   "extra": {
-    "wordpress-install-dir": "wp/wp-core"
+    "wordpress-install-dir": "wp/wp-core",
+    "installer-paths": {
+      "wp/wp-content/plugins/{$name}/": [
+        "type:wordpress-plugin"
+      ]
+    }
   }
 }
