--- a/composer.json
+++ b/composer.json
@@ -89,8 +89,7 @@
     "matthiasmullie/minify": "^1.3",
     "phpunit/phpunit": "~10.5.3",
     "psy/psysh": "^0.11.22",
-    "symfony/var-dumper": "^6.3",
-    "wpackagist-plugin/index-wp-mysql-for-speed": "^1.5"
+    "symfony/var-dumper": "^6.3"
   },
   "scripts": {
     "post-autoload-dump": [
