Finishing seeders refactoring and fixing
Also introducing new data to PostStatus model
Also removing old TaxonomyQueryBuilderTest.php
Many other minor fixes

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+/cache/                                         export-ignore
 /docker/                                        export-ignore
 /logs/                                          export-ignore
 /.editorconfig                                  export-ignore
